# mirscribe-dashboard

./: CLAUDE.md  README.md  dashboard.py  pyproject.toml  viz.py
data/: triplets.csv
